--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,8 @@
 {
-  "extends": "airbnb",
+  "extends": "standard",
+  "plugins": ["babel", "react", "jsx-a11y"],
   "rules": {
-    "arrow-body-style": 0,
-    "prefer-arrow-callback": 0,
-    "func-names": 0,
-    "react/jsx-no-bind": 0,
-    "react/jsx-uses-react": 1,
-    "react/prefer-stateless-function": 0
+    "react/jsx-uses-react": 1
   },
   "parserOptions": {
     "ecmaVersion": 6,
